# portcode

./: .editorconfig  .env.selfdev  .gitattributes  .gitignore  .graphifyignore  .mcp.json.example  .prettierignore  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  GRAPHIFY.md  LICENSE  NOTICE  PARITY-PROGRESS.md  README.md  SECURITY.md  SUPPORT.md  clippy.toml  deny.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  release-please-config.json  rust-toolchain.toml  rustfmt.toml  signatures.json  vercel.json  vite.config.ts  vite.web.config.ts  vitest.config.ts  wdio.conf.ts
.cargo/: config.toml
.claude/: README.md  settings.json
.claude/commands/: memory.md
.claude/memory/: project-memory.md
.claude/scripts/: scrub-memory.mjs  scrub-memory.test.mjs  session-start.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_quick.yml  bug_report.yml  config.yml  feature_quick.yml  feature_request.yml
.github/workflows/: android.yml  ci.yml  cla.yml  e2e.yml  release-linux.yml  release-please.yml  release.yml  staging.yml
crates/portcode-sync/: Cargo.toml
crates/portcode-sync/.cargo/: config.toml
crates/portcode-sync/src/: lib.rs  noise.rs  pairing.rs  protocol.rs  session.rs  transport.rs  transport_native.rs  transport_wasm.rs  wire.rs
crates/portcode-wasm/: Cargo.toml
crates/portcode-wasm/.cargo/: config.toml
crates/portcode-wasm/src/: lib.rs
docs/: ANDROID_APP_PLAN.md  DEV_SETUP.md  IOS_WEB_CLIENT_PLAN.md  PHONE_SYNC_RESEARCH.md  RELEASE.md  REPO_MODE_PLAN.md  ROADMAP.md  SELF_DEV.md
e2e/: README.md  tsconfig.json
e2e/specs/: smoke.e2e.ts
public/: manifest.webmanifest  sw.js
relay/: Dockerfile  README.md  docker-compose.yml  fly.toml  relay.config.toml  render.yaml
scripts/: generate-icon.mjs
spike/ios-iroh-echo/: .gitignore  README.md  build.sh
spike/ios-iroh-echo/echo-desktop/: Cargo.toml
spike/ios-iroh-echo/echo-desktop/src/: main.rs
spike/ios-iroh-echo/echo-web/: Cargo.toml
spike/ios-iroh-echo/echo-web/.cargo/: config.toml
spike/ios-iroh-echo/echo-web/src/: lib.rs
spike/ios-iroh-echo/web/: app.js  index.html  manifest.webmanifest
src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts  vite-config.test.ts  vite-env.d.ts
src-tauri/: Cargo.toml  bacon.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  agents.rs  background.rs  consent.rs  db.rs  events.rs  lib.rs  llm.rs  main.rs  oauth.rs  permissions.rs  push.rs  scrub.rs  secrets.rs  settings.rs  telemetry.rs  tools.rs  update.rs
src-tauri/src/sync/: client.rs  mod.rs  noise.rs  pairing.rs  pairing_gate.rs  protocol.rs  server.rs  session.rs  transport.rs
src/components/: AgentsPanel.test.tsx  AgentsPanel.tsx  BackgroundTasksPanel.test.tsx  BackgroundTasksPanel.tsx  ChannelBadge.test.tsx  ChannelBadge.tsx  Chat.test.tsx  Chat.tsx  CommandPalette.test.tsx  CommandPalette.tsx  Composer.test.tsx  Composer.tsx  ContextMenu.test.tsx  ContextMenu.tsx  CrashConsentPrompt.test.tsx  CrashConsentPrompt.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FileExplorer.test.tsx  FileExplorer.tsx  InstallGate.test.tsx  InstallGate.tsx  Message.test.tsx  Message.tsx  NeonRain.tsx  PermissionPrompt.test.tsx  PermissionPrompt.tsx  RemoteChatHeader.test.tsx  RemoteChatHeader.tsx  RemoteEdgeStates.test.tsx  RemoteEdgeStates.tsx  RemotePairing.test.tsx  RemotePairing.tsx  RemoteSessionSwitcher.test.tsx  RemoteSessionSwitcher.tsx  RemoteSessions.test.tsx  RemoteSessions.tsx  Settings.test.tsx  Settings.tsx  Sidebar.test.tsx  (+7 more)
src/lib/: appBadge.test.ts  appBadge.ts  channel.test.ts  channel.ts  installGate.test.ts  installGate.ts  ipc.test.ts  ipc.ts  platform.test.ts  platform.ts  pushClient.test.ts  pushClient.ts  pwaLifecycle.test.ts  pwaLifecycle.ts  scanner.test.ts  scanner.ts  scrub.test.ts  scrub.ts  sessionFormat.test.ts  sessionFormat.ts  sessionView.test.ts  sessionView.ts  telemetry.test.ts  telemetry.ts  useScramble.test.ts  useScramble.ts  useTypewriter.test.ts  useTypewriter.ts  vite-config.test.ts  viteConfig.test.ts  webClientLifecycle.test.ts  webClientLifecycle.ts  webScanner.test.ts  webScanner.ts  webSession.test.ts  webSession.ts  webStorage.test.ts  webStorage.ts
src/store/: store.test.ts  store.ts
src/test/: setup.ts  smoke.test.tsx
web/: entry.tsx  index.html
web/wasm/portcode-wasm/: README.md  portcode_wasm.d.ts  portcode_wasm.js  portcode_wasm_bg.wasm.d.ts
