# Cargo workspace root.
#
# Phase 1 of docs/IOS_WEB_CLIENT_PLAN.md (§5.1) extracts the Phone Sync
# protocol/crypto/session/transport code into the shared `portcode-sync` crate
# so it builds for BOTH native (desktop) and `wasm32` (the future
# iroh-in-browser PWA client) from one source of truth. `src-tauri` (the Tauri
# desktop binary) is a workspace member that depends on `portcode-sync` via a
# path dependency and re-exports its shared types, so the desktop build is
# unchanged in spirit — only `use` paths moved.
[workspace]
resolver = "2"
members = [
    "crates/portcode-sync",
    # Phase 2 (§5.4): the thin wasm-bindgen `Session` wrapper the browser PWA
    # loads. cdylib (the `_bg.wasm`) + rlib. Only ever built for wasm32, but it is
    # a workspace member so `cargo`/clippy and CI gate it alongside the rest.
    "crates/portcode-wasm",
    "src-tauri",
]

# Release profile for the desktop binary. In a workspace, profiles are ONLY
# honored at the root — a `[profile.release]` left in `src-tauri/Cargo.toml` is
# silently ignored (Cargo warns). These are the exact flags that previously lived
# in `src-tauri/Cargo.toml`, lifted here verbatim so the desktop release build is
# unchanged.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
# Phase 2 (Sentry) symbolication: emit full debug info so `sentry-cli debug-files
# upload` can resolve minidump + native stack frames server-side. On Windows MSVC
# (the signed release target) debug info goes to a SEPARATE `.pdb`, so `strip = true`
# (which strips the shipped `.exe`) and `debug = true` coexist — the `.pdb` is
# uploaded, the binary stays stripped.
debug = true

# Size flags for the wasm `Session` bundle (§5.3). Profiles are honored only at the
# workspace root, so the per-package override lives HERE rather than in
# `crates/portcode-wasm/Cargo.toml` (where Cargo would ignore it with a warning).
# `opt-level = "z"` (size over speed) is the one knob that differs from the desktop
# binary's `"s"`; the rest match. wasm-pack additionally runs `wasm-opt` unless the
# crate's `[package.metadata.wasm-pack]` disables it.
[profile.release.package.portcode-wasm]
opt-level = "z"
