[package]
name = "portcode"
version = "5.0.0"
description = "Portcode — a fast, native Windows AI coding agent (Porthex)."
authors = ["Porthex"]
edition = "2021"
# Bumped for `iroh` (Phone Sync transport), which requires Rust >= 1.91. CI pins
# the `stable` channel, which is well past this.
rust-version = "1.91"
license = "Apache-2.0"
publish = false

[lib]
name = "portcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# Auto-updater (Phase 2 #1). Checks the GitHub Releases `latest.json` manifest and
# verifies each update's Ed25519 signature against the public key in tauri.conf.json
# (`plugins.updater.pubkey`). The signing private key never lives in the repo — see
# the release workflow's secret-gated `tauri signer sign` step.
tauri-plugin-updater = "2"

# Phone Sync shared crate (Phase 1 of docs/IOS_WEB_CLIENT_PLAN.md): the protocol,
# Noise crypto, session loops, and the native iroh transport now live here so the
# same code compiles for the future wasm browser client. With default features
# this resolves the crate's NATIVE target table (tokio + `iroh = "1"`); the wasm
# path is selected only when something is built for wasm32. The desktop re-exports
# these types through `src/sync/*.rs`, `src/llm.rs`, and `src/db.rs`, so the rest
# of the crate stays source-compatible.
portcode-sync = { path = "../crates/portcode-sync" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "process", "sync", "time"] }
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }

async-trait = "0.1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.40", features = ["bundled"] }

# Subscription OAuth (PKCE S256). All safe Rust. The OAuth constants and flow in
# `src/oauth.rs` are credited to opencode (MIT) and the official Claude Code CLI.
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Phone Sync E2E crypto (Phase 1): application-layer Noise so the relay stays
# blind. Default features give Noise_*_25519_ChaChaPoly_BLAKE2s (Curve25519 +
# ChaCha20-Poly1305 + BLAKE2s) with getrandom — no extra flags needed. The
# `unsafe_code = "deny"` lint below applies only to this crate, not to snow.
snow = "0.10"
# Zero the long-term Noise static private key on drop so it doesn't linger in
# freed heap memory (snow uses zeroize internally for its own key material too).
zeroize = "1"

# Phone Sync transport (Phase 2): iroh QUIC — dial-by-public-key P2P with
# hole-punching and a self-hostable relay fallback. Carries the app-layer Noise
# session so the relay only ever sees ciphertext. Requires Rust >= 1.91 (see the
# rust-version bump above).
iroh = "1"

# Phone Sync Web Push (Phase 5 of docs/IOS_WEB_CLIENT_PLAN.md §5.7/§9): the desktop
# sends Web Push directly to the phone's push service (no extra server) using the
# VAPID key it owns + the subscription the phone registered. We use ONLY the crate's
# message-building + VAPID-signing + RFC-8291 payload-encryption surface
# (`WebPushMessageBuilder` / `VapidSignatureBuilder`) and POST the result through the
# desktop's existing `reqwest` client, so `default-features = false` drops the bundled
# `isahc`/`hyper` HTTP clients (and their heavy transitive deps) entirely. NOTE: this
# dep + the full desktop build are CI-gated (no GTK on the dev machine); `push.rs`'s
# pure logic is unit-tested. It is declared in the non-mobile target table below —
# web-push pulls `openssl-sys`, which can't cross-compile to Android/iOS without an
# OpenSSL sysroot, and `push.rs` is `#[cfg(desktop)]` so mobile never needs it.

# search / matching for tools
regex = "1"
globset = "0.4"
ignore = "0.4"
similar = "3"

# `keyring` (Windows Credential Manager) only has a working backend on Windows.
# On Android/Linux there is no working keyring backend, so `src/secrets.rs` uses
# an app-private file store instead and keyring is not a dependency there at all —
# gating it to `cfg(windows)` means it is never compiled for the Android
# cross-compile probe or the Linux CI leg. Relocating an already-resolved dep to
# a target table does not change its version/features, so Cargo.lock stays valid.
[target."cfg(windows)".dependencies]
keyring = { version = "3", features = ["windows-native"] }

# Native QR scanner for the phone's pairing screen — built ONLY for the mobile
# targets. The desktop advertises the pairing QR (it never scans one), so gating
# the crate to android/iOS keeps it out of the Windows/Linux desktop binaries and
# off the desktop/Linux CI legs entirely (it is registered under `#[cfg(mobile)]`).
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

# Web Push sender — DESKTOP ONLY. `push.rs` is `#[cfg(desktop)]`, and web-push pulls
# `openssl-sys`, which fails to cross-compile to the Android/iOS targets (no OpenSSL
# sysroot). Gating it to non-mobile keeps it off the Android probe + mobile builds
# while the desktop (windows/macOS/Linux) legs still get it. Relocating an
# already-resolved dep to a target table doesn't change its version/features, so
# Cargo.lock stays valid.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
web-push = { version = "0.11", default-features = false }

# NOTE: `[profile.release]` moved to the workspace ROOT `Cargo.toml` — Cargo only
# honors profiles at the workspace root and ignores (with a warning) a profile
# defined in a member manifest. The exact same flags now live there.

# Lint policy. CI runs `cargo clippy --all-targets -- -D warnings`; these make
# the same baseline reproducible for local `cargo clippy`. `unsafe_code = "deny"`
# matches Portcode's posture — the agent core holds secrets and runs shell.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
