[package]
name = "portcode"
version = "5.0.0"
description = "Portcode — a fast, native Windows AI coding agent (Porthex)."
authors = ["Porthex"]
edition = "2021"
# Bumped for `iroh` (Phone Sync transport), which requires Rust >= 1.91. CI pins
# the `stable` channel, which is well past this.
rust-version = "1.91"
license = "Apache-2.0"
publish = false

[lib]
name = "portcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# Auto-updater (Phase 2 #1). Checks the GitHub Releases `latest.json` manifest and
# verifies each update's Ed25519 signature against the public key in tauri.conf.json
# (`plugins.updater.pubkey`). The signing private key never lives in the repo — see
# the release workflow's secret-gated `tauri signer sign` step.
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "process", "sync", "time"] }
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }

async-trait = "0.1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.40", features = ["bundled"] }

# Subscription OAuth (PKCE S256). All safe Rust. The OAuth constants and flow in
# `src/oauth.rs` are credited to opencode (MIT) and the official Claude Code CLI.
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Phone Sync E2E crypto (Phase 1): application-layer Noise so the relay stays
# blind. Default features give Noise_*_25519_ChaChaPoly_BLAKE2s (Curve25519 +
# ChaCha20-Poly1305 + BLAKE2s) with getrandom — no extra flags needed. The
# `unsafe_code = "deny"` lint below applies only to this crate, not to snow.
snow = "0.10"
# Zero the long-term Noise static private key on drop so it doesn't linger in
# freed heap memory (snow uses zeroize internally for its own key material too).
zeroize = "1"

# Phone Sync transport (Phase 2): iroh QUIC — dial-by-public-key P2P with
# hole-punching and a self-hostable relay fallback. Carries the app-layer Noise
# session so the relay only ever sees ciphertext. Requires Rust >= 1.91 (see the
# rust-version bump above).
iroh = "1"

# search / matching for tools
regex = "1"
globset = "0.4"
ignore = "0.4"
similar = "3"

# `keyring` (Windows Credential Manager) only has a working backend on Windows.
# On Android/Linux there is no working keyring backend, so `src/secrets.rs` uses
# an app-private file store instead and keyring is not a dependency there at all —
# gating it to `cfg(windows)` means it is never compiled for the Android
# cross-compile probe or the Linux CI leg. Relocating an already-resolved dep to
# a target table does not change its version/features, so Cargo.lock stays valid.
[target."cfg(windows)".dependencies]
keyring = { version = "3", features = ["windows-native"] }

# Native QR scanner for the phone's pairing screen — built ONLY for the mobile
# targets. The desktop advertises the pairing QR (it never scans one), so gating
# the crate to android/iOS keeps it out of the Windows/Linux desktop binaries and
# off the desktop/Linux CI legs entirely (it is registered under `#[cfg(mobile)]`).
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

# Opt-in crash/perf reporting (Phase 1b — Rust host). Gated to DESKTOP targets so
# the crate is NEVER compiled for the Android/iOS cross-compile probe (the phone is
# a pure remote client and ships no host crash reporter — `src/telemetry.rs` is
# `#[cfg(desktop)]`). Mirrors the `keyring`/`tauri-plugin-barcode-scanner` target
# tables above. `default-features = false` + `reqwest` + `rustls` keeps the
# transport on rustls (matching this crate's `reqwest`) and avoids pulling
# openssl/native-tls; `backtrace`/`contexts`/`panic` give the panic integration +
# stack/OS contexts. The whole pipeline is compile-time-inert without a build-time
# `SENTRY_DSN` (see `telemetry::dsn`), preserving "zero telemetry by default".
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
# Phase 2 — desktop minidump capture + the webview→Rust envelope bridge. The plugin
# RE-EXPORTS `sentry` + `sentry-rust-minidump` and pins `sentry ^0.34`, so it aligns
# with the `sentry` dep above WITHOUT forcing a version bump (verified against the
# published `tauri-plugin-sentry` 0.2.0 Cargo.toml). Exact-pinned because 0.3.x bumps
# `sentry` to 0.35. The plugin's `sentry-rust-minidump` (also 0.34-aligned) re-execs
# the binary as an OUT-OF-PROCESS crash monitor (EmbarkStudios crash-handler), so
# native segfaults AND `panic = "abort"` aborts are captured even though they can't
# unwind in-process. Gated to DESKTOP (mirrors `sentry`): the phone is a remote client.
tauri-plugin-sentry = "=0.2.0"
# Resolves `<app_config_dir>` WITHOUT a Tauri app handle — the consent file is read in
# the re-exec'd crash-reporter process, which has no `AppHandle`. Tauri's own
# `app_config_dir()` is `dirs::config_dir().join(<identifier>)`, so this reproduces the
# exact path. `dirs = "6"` matches the version Tauri 2 already resolves (no dup in lock).
dirs = "6"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
# Phase 2 symbolication: emit full debug info so `sentry-cli debug-files upload` can
# resolve minidump + native stack frames server-side. On Windows MSVC (the signed
# release target) debug info goes to a SEPARATE `.pdb`, so `strip = true` (which strips
# the shipped `.exe`) and `debug = true` coexist — the `.pdb` is uploaded, the binary
# stays stripped. Verified against the official Sentry Rust source-context doc + the
# Cargo `split-debuginfo` reference (MSVC default = packed/PDB).
debug = true

# Lint policy. CI runs `cargo clippy --all-targets -- -D warnings`; these make
# the same baseline reproducible for local `cargo clippy`. `unsafe_code = "deny"`
# matches Portcode's posture — the agent core holds secrets and runs shell.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
