[package]
name = "portcode-sync"
version = "0.1.0"
description = "Shared Phone Sync protocol + Noise crypto + session loop + transport for Portcode (native + wasm32)."
authors = ["Porthex"]
edition = "2021"
# Matches the workspace root pin; `iroh` requires Rust >= 1.91.
rust-version = "1.91"
license = "Apache-2.0"
publish = false

# ── shared, wasm-safe dependencies (§5.3) ─────────────────────────────────────
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
async-trait = "0.1"
base64 = "0.22"
zeroize = "1"

# ── native (desktop) only: full tokio + iroh with direct + relay ─────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
iroh = "1"
# snow's default features include `std`, which activates `ring` (a C/asm crypto
# crate that does NOT build for wasm32). On native that's fine and matches the
# desktop's existing build, so we keep snow's defaults here.
snow = "0.10"
rand = "0.8"

# ── wasm32 (browser) only: channels-only tokio + relay-only iroh (§5.3) ──────
# tokio carries ONLY `sync` (channels) + `macros` here — NO `time`/`net`/
# `rt-multi-thread`, which pull in `mio` and don't work on browser wasm. iroh
# drops default features (notably `metrics`, which breaks wasm) and runs
# relay-only. getrandom 0.3 needs the wasm_js feature AND the cfg flag in
# `.cargo/config.toml`. gloo-timers + wasm-bindgen-futures provide the
# browser-side delay + spawn primitives the wasm transport (Phase 2) will use.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync", "macros"] }
# `tls-ring` selects the wasm-friendly rustls crypto provider (`ring`'s pure-Rust
# wasm path), which is what makes `presets::N0` (and any `Builder::crypto_provider`
# default) available on wasm32 — without a TLS feature iroh's `with_crypto_provider`
# cfg is off and the N0 preset doesn't compile. This is the same feature the Phase 0
# spike (`spike/ios-iroh-echo/echo-web`) used to compile + connect in-browser. NOTE:
# this is iroh's `tls-ring`, NOT snow's `ring` — it does not pull the C/asm `ring`
# crate the CI bleed-through audit forbids (that audit checks the `ring` *crate*).
iroh = { version = "1", default-features = false, features = ["tls-ring"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
# snow WITHOUT its default `std`/`ring` features — `default-resolver` +
# `default-resolver-crypto` select the pure-Rust RustCrypto/dalek backends
# (`Noise_XX_25519_ChaChaPoly_BLAKE2s`), which compile to wasm unchanged. DO NOT
# add `std`/`ring-accelerated`/`ring-resolver`: `ring` does not build for
# wasm32-unknown-unknown (§4.3).
snow = { version = "0.10", default-features = false, features = ["default-resolver", "default-resolver-crypto"] }
rand = "0.8"
# getrandom 0.3 is what snow's `use-getrandom` resolves to; the wasm_js feature +
# the cfg flag in `.cargo/config.toml` select the JS-backed CSPRNG.
getrandom = { version = "0.3", features = ["wasm_js"] }
# `rand 0.8` pulls `rand_core 0.6` → getrandom 0.2 (a SEPARATE major line from
# the 0.3 snow uses). Its wasm support is behind the `js` feature, so enable it
# here so the transitive 0.2 copy also builds for the browser.
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
# `tsify` (NOT `tsify-next`, which is unmaintained — §4.3) generates the TS types
# for `SyncFrame`/`RemoteCommand`/`Cursor` straight from the Rust source of truth,
# so the browser client and the desktop UI share one definition. It reads the
# existing serde attributes, so the generated `.d.ts` matches the JSON the protocol
# already speaks. wasm-only: the derive expands to wasm-bindgen ABI glue, which has
# no place in the native build. Pairs with the `tsify` derive in `protocol.rs`
# (also cfg-gated to wasm).
tsify = "0.5"
wasm-bindgen = "0.2"

# Same lint posture as the desktop crate: the sync code holds long-term key
# material, so unsafe is denied here too.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
